# ai-robotics

./: .gitignore  Pipfile  README.md  backprop.py  run.sh
src/camera_pseudo/: CMakeLists.txt
src/camera_pseudo/src/: CameraPseudo.py
src/excercise_1/: CMakeLists.txt  README.md  package.xml
src/excercise_1/launch/: excercise_1.launch
src/excercise_1/src/: Prediction.py  dataset.py  evaluate.py  model.py  prediction.py  train.py
src/prediction/src/: Prediction.py
