<?xml version="1.0"?>
<package>
    <name>excercise_1</name>
    <version>0.1.0</version>
    <description>Exercise 1</description>

    <maintainer email="baumannpa@gmail.com">Patrick Baumann</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>sensor_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>numpy</build_depend>
    <build_depend>cv_bridge</build_depend>

    <run_depend>sensor_msgs</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>numpy</run_depend>
    <run_depend>cv_bridge</run_depend>

    <export></export>
</package>
